# Friday

./: .gitignore  cli.py  config.yml  pyproject.toml
.github/workflows/: ci.yml
agent/interface/: cli.py
agent/llm_integration/: agent_client.py  ollama_client.py
benchmark/: ollama_client_hybrid_memory_benchmark.py  ollama_client_in_memory_benchmark.py  ollama_client_no_memory_benchmark.py  ollama_client_sqlite_memory_benchmark.py
benchmark/results/: benchmark_results_20250829_103238.txt  benchmark_results_20250829_103509.txt  benchmark_results_20250829_103817.txt  benchmark_results_20250829_104101.txt
docs/: memory_backends.md
src/friday/: benchmark_run.py  main.py  prompts.py
src/friday/config/: config.yml  ollama_config.yml
src/friday/interface/: cli.py
src/friday/llm_integration/: base_client.py  ollama_client.py
src/friday/memory/: base_conversation_memory.py  conversation_memory.py  hybrid_conversation_memory.py  in_memory_buffer.py  in_memory_conversation_memory.py  memory_manager.py  no_memory_conversation_memory.py  sqlite_conversation_memory.py
src/friday/utils/: benchmark.py  logger.py  parse_json.py
tests/: ollama_client_hybrid_memory_test.py  ollama_client_in_memory_test.py  ollama_client_sqlite_memory_test.py  ollama_client_test.py
